--- a/src/global.scss
+++ b/src/global.scss
@@ -9,18 +9,48 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
+
 /* Core CSS required for Ionic components to work properly */
+
 @import "~@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
+
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
 @import '~@ionic/angular/css/display.css';
 
 /* Optional CSS utils that can be commented out */
+
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+ion-content.background {
+    --background: url(./assets/img/loginBackImg.jpg) 0 0/100% 100% no-repeat;
+    opacity: 0.8;
+}
+
+.my-custom-modal-css .modal-wrapper {
+    height: 20%;
+    width: 80%;
+    top: 50%;
+    position: absolute;
+    display: block;
+}
+
+.transparent-background-color {
+    --background: transparent;
+}
+
+.my-detal-moment-modal-css .modal-wrapper {
+    height: 60%;
+    width: 100%;
+    bottom: 0%;
+    position: absolute;
+    display: block;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
