--- a/src/app/detalhe-momento/detalhe-momento.page.html
+++ b/src/app/detalhe-momento/detalhe-momento.page.html
@@ -8,24 +8,7 @@
         </ion-fab-button>
     </ion-toolbar>
 </ion-header>
-<ion-tabs>
-    <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="share">
-            <ion-icon name="share-social-outline"></ion-icon>
-            <ion-label>Partilhar</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="getMoments">
-            <ion-icon name="print-outline"></ion-icon>
-            <ion-label>Adquirir momentos</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="delete">
-            <ion-icon name="trash-outline"></ion-icon>
-            <ion-label>Apagar</ion-label>
-        </ion-tab-button>
-    </ion-tab-bar>
-</ion-tabs>
+<app-tabs> </app-tabs>
 <ion-content>
     <img src="../../assets/img/imgDef.png" width="100%" height="100%" />
 
