--- a/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
+++ b/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
@@ -1,9 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>modalVivenciarMomentos</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<!--{{conteudoModal}}-->
 <ion-content>
-
+    <ion-title class="ion-padding">Vivenciar momentos.</ion-title>
+    <ion-label class="ion-padding">Qual o tipo de momento que pretende registar?</ion-label>
+    <ion-list class="ion-padding" style="background-color: transparent;">
+        <ion-radio-group id="momento" value="foto">
+            <ion-item class="item-background-color">
+                <ion-radio value="foto"></ion-radio>
+                <ion-label style="padding-left: 5px;">Fotografia</ion-label>
+            </ion-item>
+            <ion-item class="item-background-color">
+                <ion-radio value="video"></ion-radio>
+                <ion-label style="padding-left: 5px;">Video</ion-label>
+            </ion-item>
+            <div class="row ion-padding" ng-if="">
+                <i-label class="">Tempo de gravação</i-label>
+                <ion-input></ion-input>
+            </div>
+        </ion-radio-group>
+    </ion-list>
 </ion-content>
