--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -181,7 +181,7 @@
             <ion-icon name="add-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-list side="top">
-            <ion-fab-button>
+            <ion-fab-button (click)="presentModalVivenciar()">
                 <ion-icon name="camera-outline"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
