--- a/src/global.scss
+++ b/src/global.scss
@@ -33,12 +33,18 @@ ion-content.background {
     opacity: 0.8;
 }
 
-.my-custom-modal-css .modal-wrapper {
+.modal-search-css .modal-wrapper {
     height: 20%;
     width: 80%;
     top: 50%;
     position: absolute;
     display: block;
+}
+
+.modal-vivenciar-css .modal-wrapper {
+    height: 60%;
+    width: 900%;
+    top: 20%;
 }
 
 .transparent-background-color {
@@ -53,4 +59,16 @@ ion-content.background {
     display: block;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
+}
+
+.datetimeColor {
+    color: rgb(125, 125, 125) !important;
+}
+
+.padding5 {
+    padding: 5px;
+}
+
+.radio-disabled {
+    opacity: 1;
 }
