Criação do caminho de compra/componente de galeria

--- a/src/app/components/media-item/media-item.component.html
+++ b/src/app/components/media-item/media-item.component.html
@@ -1,3 +1,14 @@
-<p>
-  media-item works!
-</p>
+<ion-card style="width: 28%;display: inline-block;" tappable (touchstart)="startPress()" (touchend)="endPress()" (click)="onClick()">
+    <ion-card-header style="padding:10px;">
+        <ion-card-subtitle class="ion-float-right">{{time}}</ion-card-subtitle>
+        <ion-checkbox style="display:block;" *ngIf="isCheckBoxVisible()" [(ngModel)]="checked" (click)="onClick()">
+        </ion-checkbox>
+    </ion-card-header>
+
+    <ion-card-content>
+        <img src={{image}} />
+        <ion-text>
+            {{place}}
+        </ion-text>
+    </ion-card-content>
+</ion-card>
