--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,16 +1,16 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="share">
+        <ion-tab-button>
             <ion-icon name="share-social-outline"></ion-icon>
             <ion-label>Partilhar</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="getMoments">
+        <ion-tab-button (click)="revelarMomentos()">
             <ion-icon name="print-outline"></ion-icon>
             <ion-label>Adquirir momentos</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="delete">
+        <ion-tab-button>
             <ion-icon name="trash-outline"></ion-icon>
             <ion-label>Apagar</ion-label>
         </ion-tab-button>
