--- a/src/app/comprar/comprar.page.html
+++ b/src/app/comprar/comprar.page.html
@@ -1,9 +1,100 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>comprar</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Revelar momentos</ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <div class="row">
+        <ion-button (click)="onClick()" style="width: 45%;padding-left: 5px;">
+            Selecionar tudo
+        </ion-button>
+        <ion-button (click)="onClick()" style="width: 45%; padding-right: 5px;" class="ion-float-right">
+            Limpar carrinho
+        </ion-button>
+    </div>
+    <ion-item-divider>
+        <ion-label>
+            Videos
+        </ion-label>
+    </ion-item-divider>
+    <ion-card style="width: 28%;display: inline-block;" (click)="retirarMomentos()">
+        <ion-card-header style="padding:10px;">
+            <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
+        </ion-card-header>
 
+        <ion-card-content>
+            <img src="../../assets/img/imgDef.png" />
+            <ion-text>
+                Viana
+            </ion-text>
+        </ion-card-content>
+    </ion-card>
+    <ion-item-divider>
+        <ion-label>
+            Fotografias
+        </ion-label>
+    </ion-item-divider>
+    <div class="row">
+        <ion-card style="width: 28%;display: inline-block;">
+            <ion-card-header style="padding:10px;">
+                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-card-content>
+                <img src="../../assets/img/imgDef.png" />
+                <ion-text>
+                    Viana
+                </ion-text>
+            </ion-card-content>
+        </ion-card>
+        <ion-card style="width: 28%;display: inline-block;">
+            <ion-card-header style="padding:10px;">
+                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-card-content>
+                <img src="../../assets/img/imgDef.png" />
+                <ion-text>
+                    Viana
+                </ion-text>
+            </ion-card-content>
+        </ion-card>
+        <ion-card style="width: 28%;display: inline-block;">
+            <ion-card-header style="padding:10px;">
+                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-card-content>
+                <img src="../../assets/img/imgDef.png" />
+                <ion-text>
+                    Viana
+                </ion-text>
+            </ion-card-content>
+        </ion-card>
+        <ion-card style="width: 28%;display: inline-block;">
+            <ion-card-header style="padding:10px;">
+                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
+            </ion-card-header>
+
+            <ion-card-content>
+                <img src="../../assets/img/imgDef.png" />
+                <ion-text>
+                    Viana
+                </ion-text>
+            </ion-card-content>
+        </ion-card>
+    </div>
 </ion-content>
+
+<ion-footer style="height:8%;">
+    <ion-button (click)="nextStep()" style="width: 45%; height:80%; padding-left: 5px;">
+        Checkout
+    </ion-button>
+    <ion-button (click)="fastCheckOut()" style="width: 45%; height:80%; padding-right: 5px;" class="ion-float-right">
+        Checkout Rapido
+    </ion-button>
+</ion-footer>
