--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -1,175 +1,55 @@
 <ion-header>
-
+    <ion-toolbar class="i-text-center" *ngIf="isSelectMode()">
+        <ion-title size="small"> {{getMsgCounter()}} </ion-title>
+        <ion-icon color="white" slot="end" name="copy-outline" (click)="selectAll()">
+        </ion-icon>
+        <ion-icon slot="end" name="remove-outline" (click)="unSelectAll()"></ion-icon>
+        <ion-icon slot="start" name="close-outline" (click)="cancelSelect()"></ion-icon>
+    </ion-toolbar>
 </ion-header>
-
 <ion-content>
     <div>
-        <ion-title style="margin-top: 20px;font-weight: bold;">Palco(hoje)</ion-title>
+
+
+        <ion-title style="margin-top: 20px; font-weight: bold;" size="small" *ngIf="isSelectMode()">
+            Palco(hoje)
+        </ion-title>
+
+        <ion-title style="margin-top: 20px; font-weight: bold;" size="large" *ngIf="!isSelectMode()">
+            Palco(hoje)
+        </ion-title>
+
+
+
         <div class="row" class="ion-align-items-center">
-            <ion-card style="width: 28%;display: inline-block;" (click)="verAlbum($event)">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+            </app-media-item>
         </div>
+
+    </div>
+
+
+
+    <div>
+        <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Cartaz(última semana)
+        </ion-title>
+        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Cartaz(última semana)
+        </ion-title>
+
+        <div class="row" class="ion-align-items-center">
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
+            </app-media-item>
+        </div>
+
     </div>
     <div>
-        <ion-title style="margin-top: 20px;font-weight: bold;">Cartaz(ultima semana)</ion-title>
+        <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Bastidores(outros)
+        </ion-title>
+        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Bastidores(outros)
+        </ion-title>
         <div class="row" class="ion-align-items-center">
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-        </div>
-        <div class="row" class="ion-align-items-center">
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-        </div>
-    </div>
-    <div>
-        <ion-title style="margin-top: 20px;font-weight: bold;">Bastidores(outros)</ion-title>
-        <div class="row" class="ion-align-items-center">
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
-
-            <ion-card style="width: 28%;display: inline-block;">
-                <ion-card-header style="padding:10px;">
-                    <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-                </ion-card-header>
-
-                <ion-card-content>
-                    <img src="../../assets/img/imgDef.png" />
-                    <ion-text>
-                        Viana
-                    </ion-text>
-                </ion-card-content>
-            </ion-card>
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+            </app-media-item>
         </div>
     </div>
 
@@ -202,4 +82,10 @@
             </ion-fab-button>
         </ion-fab-list>
     </ion-fab>
+
 </ion-content>
+<ion-footer *ngIf="isSelectMode()">
+    <ion-toolbar>
+        <app-tabs></app-tabs>
+    </ion-toolbar>
+</ion-footer>
