--- a/src/app/dados-encomenda/dados-encomenda.page.html
+++ b/src/app/dados-encomenda/dados-encomenda.page.html
@@ -45,10 +45,10 @@
     </ion-button>
 </ion-content>
 <ion-footer style="height:8%;">
-    <ion-button (click)="nextStep()" style="width: 45%; height:80%; padding-left: 5px;">
+    <ion-button (click)="cancelar()" style="width: 45%; height:80%; padding-left: 5px;">
         Cancelar
     </ion-button>
-    <ion-button (click)="onClick()" style="width: 45%; height:80%; padding-right: 5px;" class="ion-float-right">
+    <ion-button (click)="nextStep()" style="width: 45%; height:80%; padding-right: 5px;" class="ion-float-right">
         Finalizar
     </ion-button>
 </ion-footer>
