--- a/src/app/modal-compra-efetuada/modal-compra-efetuada.page.html
+++ b/src/app/modal-compra-efetuada/modal-compra-efetuada.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-margin">
     <div>
         <ion-title>Copra realizada com sucesso!</ion-title>
-        <ion-button (click)="fastCheckOut()">
+        <ion-button (click)="finalizarCompra()">
             Continuar a reviver os meus momentos
         </ion-button>
     </div>
