--- a/src/app/modal-apagar-momento/modal-apagar-momento.page.html
+++ b/src/app/modal-apagar-momento/modal-apagar-momento.page.html
@@ -1,9 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>modal-apagar-momento</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-
+    <ion-title>Apagar momento.</ion-title>
+    <ion-label>Tem a certeza que pretende apagar estemomento?</ion-label>
+    <section>
+        <ion-button (click)="cancelar()">Cancelar</ion-button>
+        <ion-button color="danger" (click)="confirma()">Apagar</ion-button>
+    </section>
 </ion-content>
