--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -11,7 +11,7 @@
         </ion-tab-button>
 
         <ion-tab-button>
-            <ion-icon name="trash-outline"></ion-icon>
+            <ion-icon name="trash-outline" (click)="deleteItem()"></ion-icon>
             <ion-label>Apagar</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
