--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -22,22 +22,23 @@
 
 
         <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                *ngFor="let i of [].constructor(3) ">
             </app-media-item>
         </div>
 
     </div>
 
-
-
     <div>
         <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Cartaz(última semana)
         </ion-title>
-        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Cartaz(última semana)
+        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Cartaz(última
+            semana)
         </ion-title>
 
         <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                *ngFor="let i of [].constructor(6) ">
             </app-media-item>
         </div>
 
@@ -48,13 +49,11 @@
         <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Bastidores(outros)
         </ion-title>
         <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                *ngFor="let i of [].constructor(3) ">
             </app-media-item>
         </div>
     </div>
-
-
-
 
     <ion-fab vertical="bottom" horizontal="start" slot="fixed" style="margin-bottom:13%; margin-left:13%;">
         <ion-fab-button color="light">
@@ -84,8 +83,8 @@
     </ion-fab>
 
 </ion-content>
-<ion-footer *ngIf="isSelectMode()">
-    <ion-toolbar>
+<ion-footer>
+    <ion-toolbar id="tabP" hidden>
         <app-tabs></app-tabs>
     </ion-toolbar>
 </ion-footer>
