--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -28,8 +28,6 @@
 
     </div>
 
-
-
     <div>
         <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Cartaz(última semana)
         </ion-title>
@@ -52,9 +50,6 @@
             </app-media-item>
         </div>
     </div>
-
-
-
 
     <ion-fab vertical="bottom" horizontal="start" slot="fixed" style="margin-bottom:13%; margin-left:13%;">
         <ion-fab-button color="light">
@@ -84,8 +79,8 @@
     </ion-fab>
 
 </ion-content>
-<ion-footer *ngIf="isSelectMode()">
-    <ion-toolbar>
+<ion-footer>
+    <ion-toolbar id="tabP" hidden>
         <app-tabs></app-tabs>
     </ion-toolbar>
 </ion-footer>
