--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -8,48 +8,51 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <div>
 
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="auto">
+                <ion-text>
+                    <h1 *ngIf="!isSelectMode()">Palco(hoje)</h1>
+                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Palco(hoje)</h1>
+                </ion-text>
+            </ion-col>
+            <ion-col size="auto">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+                </app-media-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-        <ion-title style="margin-top: 20px; font-weight: bold;" size="small" *ngIf="isSelectMode()">
-            Palco(hoje)
-        </ion-title>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="auto">
+                <ion-text>
+                    <h1 *ngIf="!isSelectMode()">Cartaz(última semana)</h1>
+                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Cartaz(última semana)</h1>
+                </ion-text>
+            </ion-col>
+            <ion-col size="auto">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
+                </app-media-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-        <ion-title style="margin-top: 20px; font-weight: bold;" size="large" *ngIf="!isSelectMode()">
-            Palco(hoje)
-        </ion-title>
-
-
-
-        <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
-            </app-media-item>
-        </div>
-
-    </div>
-
-    <div>
-        <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Cartaz(última semana)
-        </ion-title>
-        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Cartaz(última semana)
-        </ion-title>
-
-        <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
-            </app-media-item>
-        </div>
-
-    </div>
-    <div>
-        <ion-title style="margin-top: 20px;font-weight: bold;" size="small" *ngIf="isSelectMode()">Bastidores(outros)
-        </ion-title>
-        <ion-title style="margin-top: 20px;font-weight: bold;" size="large" *ngIf="!isSelectMode()">Bastidores(outros)
-        </ion-title>
-        <div class="row" class="ion-align-items-center">
-            <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
-            </app-media-item>
-        </div>
-    </div>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="auto">
+                <ion-text>
+                    <h1 *ngIf="!isSelectMode()">Bastidores(outros)</h1>
+                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Bastidores(outros)</h1>
+                </ion-text>
+            </ion-col>
+            <ion-col size="auto">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(10) ">
+                </app-media-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
     <ion-fab vertical="bottom" horizontal="start" slot="fixed" style="margin-bottom:13%; margin-left:13%;">
         <ion-fab-button color="light">
