--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -17,6 +17,8 @@
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Palco(hoje)</h1>
                 </ion-text>
             </ion-col>
+        </ion-row>
+        <ion-row>
             <ion-col size="auto">
                 <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
                     *ngFor="let i of [].constructor(3) ">
@@ -33,6 +35,8 @@
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Cartaz(última semana)</h1>
                 </ion-text>
             </ion-col>
+        </ion-row>
+        <ion-row>
             <ion-col size="auto">
                 <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
                     *ngFor="let i of [].constructor(6) ">
@@ -49,6 +53,8 @@
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Bastidores(outros)</h1>
                 </ion-text>
             </ion-col>
+        </ion-row>
+        <ion-row>
             <ion-col size="auto">
                 <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
                     *ngFor="let i of [].constructor(10) ">
