--- a/src/global.scss
+++ b/src/global.scss
@@ -43,8 +43,18 @@ ion-content.background {
 
 .modal-vivenciar-css .modal-wrapper {
     height: 60%;
-    width: 900%;
+    width: 90%;
     top: 20%;
+}
+
+.modal-partilhar-css .modal-wrapper {
+    height: 70%;
+    width: 100%;
+    bottom: 0%;
+    position: absolute;
+    display: block;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
 
 .transparent-background-color {
@@ -71,4 +81,13 @@ ion-content.background {
 
 .radio-disabled {
     opacity: 1;
+}
+
+.centra-safada {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
