--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -1,216 +1,35 @@
 <ion-header>
-    <ion-toolbar class="transparent-background-color">
+    <ion-toolbar class="transparent-background-color" *ngIf="!isSelectMode()">
         <ion-title>Momentos</ion-title>
         <ion-buttons slot="start">
             <ion-back-button defaultHref="pagina-inicial"></ion-back-button>
         </ion-buttons>
     </ion-toolbar>
+    <ion-toolbar class="i-text-center" *ngIf="isSelectMode()">
+        <ion-title size="small"> {{getMsgCounter()}} </ion-title>
+        <ion-icon color="white" slot="end" name="copy-outline" (click)="selectAll()">
+        </ion-icon>
+        <ion-icon slot="end" name="remove-outline" (click)="unSelectAll()"></ion-icon>
+        <ion-icon slot="start" name="close-outline" (click)="cancelSelect()"></ion-icon>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <div class="row" class="ion-align-items-center">
-        <ion-card style="width: 28%;display: inline-block;" (click)="verMomento($event)">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
 
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
 
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
+    <ion-grid fixed>
+        <ion-row>
+            <ion-col size="auto">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" time="13:29"
+                    *ngFor="let i of [].constructor(12) ">
+                </app-media-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-
-        <ion-card style="width: 28%;display: inline-block;">
-            <ion-card-header style="padding:10px;">
-                <ion-card-subtitle class="ion-float-right">14:30</ion-card-subtitle>
-            </ion-card-header>
-
-            <ion-card-content>
-                <img src="../../assets/img/imgDef.png" />
-            </ion-card-content>
-        </ion-card>
-    </div>
 </ion-content>
+<ion-footer>
+    <ion-toolbar id="tabP" hidden>
+        <app-tabs></app-tabs>
+    </ion-toolbar>
+</ion-footer>
