fixed src in momentos

--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -20,7 +20,7 @@
     <ion-grid fixed>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" time="13:29"
+                <app-media-item route="detalhe-momento" image="../../assets/img/imgDef.png" time="13:29"
                     *ngFor="let i of [].constructor(12) ">
                 </app-media-item>
             </ion-col>
