--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -30,6 +30,6 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar id="tabP" hidden>
-        <app-tabs></app-tabs>
+        <app-tabs deleteDirect="false"></app-tabs>
     </ion-toolbar>
 </ion-footer>
