--- a/src/app/detalhe-momento/detalhe-momento.page.html
+++ b/src/app/detalhe-momento/detalhe-momento.page.html
@@ -8,8 +8,33 @@
         </ion-fab-button>
     </ion-toolbar>
 </ion-header>
-<app-tabs> </app-tabs>
+
 <ion-content>
     <img src="../../assets/img/imgDef.png" width="100%" height="100%" />
 
 </ion-content>
+
+<ion-footer>
+    <ion-toolbar>
+
+
+        <ion-tabs>
+            <ion-tab-bar slot="bottom">
+                <ion-tab-button (click)="share()">
+                    <ion-icon name="share-social-outline"></ion-icon>
+                    <ion-label>Partilhar</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button (click)="revelarMomentos()">
+                    <ion-icon name="print-outline"></ion-icon>
+                    <ion-label>Adquirir momentos</ion-label>
+                </ion-tab-button>
+
+                <ion-tab-button (click)="apagar()">
+                    <ion-icon name="trash-outline"></ion-icon>
+                    <ion-label>Apagar</ion-label>
+                </ion-tab-button>
+            </ion-tab-bar>
+        </ion-tabs>
+    </ion-toolbar>
+</ion-footer>
