--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -20,7 +20,8 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                    *ngFor="let i of [].constructor(3) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
@@ -37,7 +38,8 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                    *ngFor="let i of [].constructor(6) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
@@ -54,7 +56,8 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(10) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                    *ngFor="let i of [].constructor(10) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
@@ -90,6 +93,6 @@
 </ion-content>
 <ion-footer>
     <ion-toolbar id="tabP" hidden>
-        <app-tabs></app-tabs>
+        <app-tabs deleteDirect="false"></app-tabs>
     </ion-toolbar>
 </ion-footer>
