--- a/src/app/detalhe-momento/detalhe-momento.page.html
+++ b/src/app/detalhe-momento/detalhe-momento.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar class="transparent-background-color">
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-back-button defaultHref="momentos"></ion-back-button>
         </ion-buttons>
         <ion-fab-button color="light" style="float:right; padding: 8px;" (click)="presentModalDetalhesMomento()">
             <ion-icon name="ellipsis-vertical-outline"></ion-icon>
