Adicionar android e splash screen

--- a/src/app/modal-partilha/modal-partilha.page.html
+++ b/src/app/modal-partilha/modal-partilha.page.html
@@ -10,7 +10,7 @@
                 <img src="../../assets/img/avatar.jpg" />
             </ion-avatar>
             Mauro
-            <ion-button slot="end">
+            <ion-button slot="end" (click)="partilhaAmiguinho(this)">
                 Partilha
             </ion-button>
         </ion-item>
