--- a/src/app/momento-video/momento-video.page.html
+++ b/src/app/momento-video/momento-video.page.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="row" class="ion-padding">
-        <ion-card *ngFor="let card of cards" style="width: 28%;display: inline-block;" (click)="retirarMomentos()">
+        <ion-card *ngFor="let card of cards" style="width: 28%;display: inline-block;">
             <ion-card-header style="padding:10px;">
                 <ion-card-subtitle class="ion-float-right">00:10</ion-card-subtitle>
             </ion-card-header>
