toolbar da página momentos

--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -1,16 +1,23 @@
 <ion-header>
     <ion-toolbar class="transparent-background-color" *ngIf="!isSelectMode()">
-        <ion-title>Momentos</ion-title>
+        <ion-title size="medium">Momentos</ion-title>
         <ion-buttons slot="start">
             <ion-back-button defaultHref="pagina-inicial"></ion-back-button>
         </ion-buttons>
     </ion-toolbar>
-    <ion-toolbar class="i-text-center" *ngIf="isSelectMode()">
-        <ion-title size="small"> {{getMsgCounter()}} </ion-title>
-        <ion-icon color="white" slot="end" name="copy-outline" (click)="selectAll()">
-        </ion-icon>
-        <ion-icon slot="end" name="remove-outline" (click)="unSelectAll()"></ion-icon>
-        <ion-icon slot="start" name="close-outline" (click)="cancelSelect()"></ion-icon>
+    <ion-toolbar *ngIf="isSelectMode()">
+        <ion-button size="small" color="dark" fill="clear" slot="start" (click)="cancelSelect()">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+
+        <ion-title size="medium"> {{getMsgCounter()}} </ion-title>
+
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="selectAll()">
+            <ion-icon slot="icon-only" name="checkmark-done"></ion-icon>
+        </ion-button>
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="unSelectAll()">
+            <ion-icon slot="icon-only" name="square-outline"></ion-icon>
+        </ion-button>
     </ion-toolbar>
 </ion-header>
 
