--- a/src/global.scss
+++ b/src/global.scss
@@ -94,3 +94,11 @@ ion-backdrop {
     top: 50%;
     transform: translateY(-50%);
 }
+
+.primary-color {
+    color: #3880ff;
+}
+
+.disable-color {
+    color: #A9A9A9;
+}
