--- a/src/global.scss
+++ b/src/global.scss
@@ -33,7 +33,18 @@ ion-content.background {
     opacity: 0.8;
 }
 
+ion-backdrop {
+    --backdrop-opacity: 0.7;
+}
 
+.modal-notification-css .modal-wrapper{
+    
+    max-height:45%;
+    top: 0%;
+    position: absolute;
+    display: block;
+    
+}
 
 .modal-search-css .modal-wrapper {
     height: 7%;
@@ -42,9 +53,7 @@ ion-content.background {
     border-radius: 25px;
 }
 
-ion-backdrop {
-    --backdrop-opacity: 0.87;
-}
+
 
 .modal-vivenciar-css .modal-wrapper {
     height: 60%;
