--- a/src/global.scss
+++ b/src/global.scss
@@ -52,9 +52,10 @@ ion-backdrop {
 }
 
 .modal-vivenciar-css .modal-wrapper {
-    height: 60%;
+    height: 40%;
     width: 90%;
     top: 20%;
+    border-radius: 15px;
 }
 
 .modal-partilhar-css .modal-wrapper {
