--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -19,7 +19,7 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto" class="title">
+            <ion-col size="12" class="title">
                 <ion-text>
                     <h1 *ngIf="!isSelectMode()">Palco <span class="complementTitle">(hoje)</span></h1>
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Palco (hoje)
@@ -28,7 +28,7 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="12">
                 <app-media-item route="momentos" image={{i.value.src}} place={{i.value.localizacao}}
                     time={{i.value.hora}} *ngFor="let i of albuns.slice(0,3) | keyvalue">
                 </app-media-item>
@@ -38,7 +38,7 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto" class="title">
+            <ion-col size="12" class="title">
                 <ion-text>
                     <h1 *ngIf="!isSelectMode()">Cartaz <span class="complementTitle">(última semana)</span></h1>
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Cartaz (última semana)</h1>
@@ -46,7 +46,7 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="12">
                 <app-media-item route="momentos" image={{i.value.src}} place={{i.value.localizacao}}
                     time={{i.value.hora}} *ngFor="let i of albuns.slice(3,9) | keyvalue">
                 </app-media-item>
@@ -56,7 +56,7 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto" class="title">
+            <ion-col size="12" class="title">
                 <ion-text>
                     <h1 *ngIf="!isSelectMode()">Bastidores <span class="complementTitle">(outros)</span></h1>
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Bastidores(outros)</h1>
@@ -64,9 +64,9 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="12">
                 <app-media-item route="momentos" image={{i.value.src}} place={{i.value.localizacao}}
-                    time={{i.value.hora}} *ngFor="let i of albuns.slice(9,16) | keyvalue">
+                    time={{i.value.hora}} *ngFor="let i of albuns.slice(9,15) | keyvalue">
                 </app-media-item>
             </ion-col>
         </ion-row>
