--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -27,13 +27,14 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto">
-                <app-media-item route="momentos" image={{i.value.src}} place={{i.value.localizacao}}
-                    time={{i.value.hora}} *ngFor="let i of albuns.slice(2,10) | keyvalue">
+            <ion-col size="12">
+                <app-media-item route="detalhe-momento" image={{i.value.src}} time={{i.value.hora}}
+                    *ngFor="let i of albuns.slice(0,8) | keyvalue">
                 </app-media-item>
             </ion-col>
         </ion-row>
     </ion-grid>
+
 
 </ion-content>
 <ion-footer>
